Fix non-blocking scroll on mobile in safari

--- a/src/ui/styles/base.scss
+++ b/src/ui/styles/base.scss
@@ -5,6 +5,8 @@ body,
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    // for correct overflow: hidden in safari
+    position: relative;
 }
 
 *,
@@ -17,7 +19,7 @@ body.js-screenshot-mode * {
     transition: none !important; // stylelint-disable-line declaration-no-important
 }
 
-/* 
+/*
     At the moment of dynamic loading of the charts from @gravity-ui/chartkit, the main styles come to the runtime
     from @gravity-ui/uikit, which override font-family, where the basic font is 'Helvetica Neue'
     https://github.com/gravity-ui/uikit/blob/main/styles/typography.scss#L2
